--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -13,13 +13,13 @@
     <div class="profile">
         <div class="sidebar">
             <h1>Username here</h1>
-            <a href="#">Profile Information</a>
-            <a href="#">Orders</a>
-            <a href="#">Address Information</a>
+            <a onclick="open_part1()">Profile Information</a>
+            <a onclick="open_part2()">Orders</a>
+            <a onclick="open_part3()">Address Information</a>
         </div>
 
         <div class="main-part">
-            <div class="main-part1" style="display: none;">
+            <div class="main-part1" id="main-part1" style="display: none;">
                 <h1>Profile Information</h1>
                 <input type="text" placeholder="First Name">
                 <input type="text" placeholder="Middle Name">
@@ -31,7 +31,7 @@
                 <button type="submit">Save</button>
             </div>
 
-            <div class="main-part2" style="display: block;">
+            <div class="main-part2" id="main-part2" style="display: none;">
                 <h1>Address Information</h1>
                 <button type="button" class="add-address">Add Address</button>
                 
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div class="main-part3" style="display: none;">
+            <div class="main-part3" id="main-part3" style="display: none;">
                 <h1>Orders</h1>
 
                 <div class="order">
@@ -71,4 +71,6 @@
             </div>
         </div>
     </div>
+
+    <script src="{% static 'js/profile.js' %}"></script>
 {% endblock %}
