--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -43,6 +43,10 @@ nav {
     position: relative;
 }
 
+.cart-icon {
+    position: relative;
+}
+
 .website-titles {
     display: block;
     position: relative;
