--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -35,7 +35,7 @@
 
 
                     <div class="navs-div">
-                        <a href="{% url 'favorites' %}" class="favorite-button" style="text-decoration: none;">
+                        <a href="{% url 'favorites' %}" class="favorite-button" style="text-decoration: none; margin-right: 5px;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                 class="bi bi-heart-fill favorite-icon" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd"
@@ -43,7 +43,7 @@
                             </svg>
                         </a>
 
-                        <a href="{% url 'cart' %}" class="cart-button" style="text-decoration: none;">
+                        <a href="{% url 'cart' %}" class="cart-button" style="text-decoration: none; margin-right: 5px;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                 class="bi bi-cart cart-icon" viewBox="0 0 16 16">
                                 <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 
