--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -13,9 +13,9 @@
     <div class="profile">
         <div class="sidebar">
             <h1>Username here</h1>
-            <a onclick="open_part1()">Profile Information</a>
-            <a onclick="open_part2()">Orders</a>
-            <a onclick="open_part3()">Address Information</a>
+            <a onclick="open_part1()" style="cursor: pointer;">Profile Information</a>
+            <a onclick="open_part2()" style="cursor: pointer;">Orders</a>
+            <a onclick="open_part3()" style="cursor: pointer;">Address Information</a>
         </div>
 
         <div class="main-part">
