--- a/basroba/app/templates/products.html
+++ b/basroba/app/templates/products.html
@@ -11,7 +11,7 @@
 
 {% block body %}
     <section class="section2">
-        <h2 class="section2-title">პროდუქცები</h2>
+        <h2 class="section2-title">პროდუქტები</h2>
         
         <div class="products-div">
             <a href="{% url 'product' %}">
