--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -5,116 +5,94 @@
     <link rel="stylesheet" href="{% static 'css/product.css' %}">
 {% endblock %}
 
-
 {% block title %}
+    {{ product.Product_name }}
 {% endblock %}
 
 {% block body %}
-    <form class="section1">
-        <div class="pictures-div">
-            <div class="other-pics">
-                <img src="{% static 'pics/Dress.png' %}" class="other-image" alt="">
-                <img src="{% static 'pics/Dress.png' %}" class="other-image" alt="">
-                <img src="{% static 'pics/Dress.png' %}" class="other-image" alt="">
-            </div>
-
-            <img src="{% static 'pics/Dress.png' %}" class="main-picture" alt="">
-        </div>
-
-        <div class="main-part">
-            <h1 class="product-title">{{ product.Product_name }}</h1>
-            <h1 class="product-category">{{ Product.Product_Category }}</h1>
-
-            <div class="old-price1">
-                {% if product.Product_price_old != "No" %}
-                    <h1 class="old-price2">₾{{ product.Product_price_old }}</h1>
-                    <hr class="old-price3">
-                    <h1 class="new-price">₾{{ product.Product_price_new }}</h1>
-                {% else %}
-                    <h1 class="new-price">₾{{ product.Product_price_new }}</h1>
+<form class="section1">
+    <!-- Product Images -->
+    <div class="pictures-div">
+        <div class="other-pics">
+            {% for img in product_images %}
+                {% if img %}
+                    <img src="{{ img.url }}" class="other-image" alt="{{ product.Product_name }}">
                 {% endif %}
-            </div>
+            {% endfor %}
+        </div>
+        <img src="{{ product.Product_image1.url }}" class="main-picture" alt="{{ product.Product_name }}">
+    </div>
 
-            <h1 class="payment-method">{{ product.product_description }}</h1>
+    <!-- Main Product Info -->
+    <div class="main-part">
+        <h1 class="product-title">{{ product.Product_name }}</h1>
+        <h1 class="product-category">{{ product.Product_Category }}</h1>
 
-            <div class="rating-div">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill rating-icon" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+        <div class="old-price1">
+            {% if product.Product_price_old != "No" %}
+                <h1 class="old-price2">₾{{ product.Product_price_old }}</h1>
+                <hr class="old-price3">
+                <h1 class="new-price">₾{{ product.Product_price_new }}</h1>
+            {% else %}
+                <h1 class="new-price">₾{{ product.Product_price_new }}</h1>
+            {% endif %}
+        </div>
+
+        <h1 class="payment-method">{{ product.product_description }}</h1>
+
+        <!-- Ratings -->
+        <div class="rating-div">
+            {% for i in "12345"|make_list %}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-star-fill rating-icon" viewBox="0 0 16 16">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792
+                             c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73
+                             c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
                 </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill rating-icon" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill rating-icon" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill rating-icon" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill rating-icon" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
+            {% endfor %}
+            <h1 class="rating-text">{{ product.Product_rating }} შეფასება</h1>
+        </div>
 
-                <h1 class="rating-text">5 შეფასება</h1>
-            </div>
+        <hr class="main-part-line">
 
-            <hr class="main-part-line">
-
-            <div class="color-div">
-                <h1 class="color-title">აირჩიეთ ფერი:</h1>
-
-                <div class="color-picker">
-                    {% if product.Product_color1 != "No" %}
-                        <input type="radio" id="red" name="color" value="red" checked>
-                        <label for="red" class="red"></label>
-                    {% endif %}
-
-                    <input type="radio" id="green" name="color" value="green">
-                    <label for="green" class="green"></label>
-
-                    <input type="radio" id="blue" name="color" value="blue">
-                    <label for="blue" class="blue"></label>
-                </div>
-            </div>
-
-            <div class="size-selector">
-                <div class="size-label">
-                    <h1 class="size-title">ზომა:</h1>
-                </div>
-
-                <div class="sizes">
-                    <button class="size-button" type="button" data-size="XS">XS</button>
-                    <button class="size-button" type="button" data-size="S">S</button>
-                    <button class="size-button" type="button" data-size="M">M</button>
-                    <button class="size-button" type="button" data-size="L">L</button>
-                    <button class="size-button" type="button" data-size="XL">XL</button>
-                </div>
-            </div>
-
-            <div class="buttons-div">
-                <button class="first-button favorite-button2">ფავორიტად არჩევა</button>
-                <button class="second-button add-to-cart-button2">კალათაში დამატება</button>
+        <!-- Colors -->
+        <div class="color-div">
+            <h1 class="color-title">აირჩიეთ ფერი:</h1>
+            <div class="color-picker">
+                {% for color in product_colors %}
+                    <input type="radio" id="{{ color }}" name="color" value="{{ color }}" {% if forloop.first %}checked{% endif %}>
+                    <label for="{{ color }}" class="{{ color }}"></label>
+                {% endfor %}
             </div>
         </div>
-    </form>
 
-    <script>
-        const options = document.querySelectorAll('.color-option');
-        const label = document.querySelector('.label');
+        <!-- Sizes -->
+        <div class="size-selector">
+            <div class="size-label">
+                <h1 class="size-title">ზომა:</h1>
+            </div>
+            <div class="sizes">
+                {% for size in available_sizes %}
+                    <button class="size-button" type="button" data-size="{{ size }}">{{ size }}</button>
+                {% endfor %}
+            </div>
+        </div>
 
-        options.forEach(option => {
-            option.addEventListener('click', () => {
-                options.forEach(o => o.classList.remove('selected'));
-                option.classList.add('selected');
-                label.textContent = "ფერი: " + option.dataset.color;
-            });
+        <!-- Buttons -->
+        <div class="buttons-div">
+            <button class="first-button favorite-button2">ფავორიტად არჩევა</button>
+            <button class="second-button add-to-cart-button2">კალათაში დამატება</button>
+        </div>
+    </div>
+</form>
+
+<script>
+    document.querySelectorAll('.size-button').forEach(button => {
+        button.addEventListener('click', function() {
+            document.querySelectorAll('.size-button').forEach(b => b.classList.remove('selected'));
+            this.classList.add('selected');
+            document.querySelector('.size-title').innerText = `ზომა: ${this.dataset.size}`;
         });
-
-        document.querySelectorAll('.size-button').forEach(button => {
-            button.addEventListener('click', function() {
-                document.querySelectorAll('.size-button').forEach(b => b.classList.remove('selected'));
-                this.classList.add('selected');
-                document.querySelector('.size-title').innerText = `ზომა: ${this.dataset.size}`;
-            });
-        });
-    </script>
+    });
+</script>
 {% endblock %}
