--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -56,15 +56,14 @@
         <hr class="main-part-line">
 
         <!-- Colors -->
-        <div class="color-div">
-            <h1 class="color-title">აირჩიეთ ფერი:</h1>
-            <div class="color-picker">
-                {% for color in product_colors %}
-                    <input type="radio" id="{{ color }}" name="color" value="{{ color }}" {% if forloop.first %}checked{% endif %}>
-                    <label for="{{ color }}" class="{{ color }}"></label>
-                {% endfor %}
-            </div>
+        <div class="color-picker">
+            {% for color in product_colors %}
+                <input type="radio" id="color{{ color.id }}" name="color" value="{{ color.name }}" {% if forloop.first %}checked{% endif %}>
+                <label for="color{{ color.id }}" class="{{ color.name }}"></label>
+            {% endfor %}
         </div>
+
+
 
         <!-- Sizes -->
         <div class="size-selector">
