--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-<form class="section1" method="post" action="{% url 'product' ID %}">
+<form class="section1" method="post">
     <!-- Product Images -->
     <div class="pictures-div">
         <div class="other-pics">
