--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-<form class="section1" method="post">
+<form class="section1">
     <!-- Product Images -->
     <div class="pictures-div">
         <div class="other-pics">
@@ -106,6 +106,57 @@
             // Put old main pic into the clicked thumbnail
             thumbnail.src = oldSrc;
         });
+    });
+
+        // CSRF token for AJAX
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+
+    // Add to cart
+    document.querySelector('.add-to-cart-button2').addEventListener('click', function() {
+        const size = document.querySelector('.size-button.selected')?.dataset.size || '';
+        const color = document.querySelector('input[name="color"]:checked')?.value || '';
+        const productId = "{{ product.id }}";
+
+        fetch("{% url 'add_to_cart' %}", {
+            method: "POST",
+            headers: {
+                "X-CSRFToken": csrftoken,
+                "Content-Type": "application/x-www-form-urlencoded"
+            },
+            body: `product_id=${productId}&color=${color}&size=${size}`
+        })
+        .then(response => response.json())
+        .then(data => alert(data.message));
+    });
+
+    // Add to favorites
+    document.querySelector('.favorite-button2').addEventListener('click', function() {
+        const productId = "{{ product.id }}";
+
+        fetch("{% url 'add_to_favorites' %}", {
+            method: "POST",
+            headers: {
+                "X-CSRFToken": csrftoken,
+                "Content-Type": "application/x-www-form-urlencoded"
+            },
+            body: `product_id=${productId}`
+        })
+        .then(response => response.json())
+        .then(data => alert(data.message));
     });
 </script>
 {% endblock %}
