--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -78,7 +78,7 @@
         <!-- Buttons -->
         <div class="buttons-div">
             <button class="first-button favorite-button2">ფავორიტად არჩევა</button>
-            <button class="second-button add-to-cart-button2" id="cart-add" type="button">კალათაში დამატება</button>
+            <button class="second-button add-to-cart-button2" id="cart-add" type="button" onclick="add_to_cart()">კალათაში დამატება</button>
         </div>
     </div>
 </form>
@@ -102,5 +102,26 @@
             thumbnail.src = oldSrc;
         });
     });
+
+
+    function add_to_cart() {
+        fetch("/api/add_to_cart/", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": "{{ csrf_token }}" 
+            },
+            body: JSON.stringify({ product_id: `{{ product.id }}`, size: document.querySelector('.size-button.selected') ? document.querySelector('.size-button.selected').dataset.size : null, color: document.querySelector('input[name="color"]:checked').value })
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log("Response:", data);
+            document.getElementById("result").innerText = data.message;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+
+    }; 
 </script>
 {% endblock %}
