--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -58,8 +58,8 @@
         <!-- Colors -->
         <div class="color-picker">
             {% for color in product_colors %}
-                <input type="radio" id="color{{ color.id }}" name="color" value="{{ color.name }}" {% if forloop.first %}checked{% endif %}>
-                <label for="color{{ color.id }}" class="{{ color }}">{{ color.name }}</label>
+                <input type="radio" id="color{{ color.id }}" name="color" value="{{ color }}" {% if forloop.first %}checked{% endif %}>
+                <label for="color{{ color.id }}" class="{{ color }}">{{ color.name }}</label>   
             {% endfor %}
         </div>
 
@@ -104,31 +104,35 @@
     });
 
 
-function add_to_cart() {
-    const selectedColorInput = document.querySelector('input[name="color"]:checked');
-    const selectedSize = document.querySelector('.size-button.selected');
+    function add_to_cart() {
+        const selectedColorInput = document.querySelector('input[name="color"]:checked');
+        const selectedSize = document.querySelector('.size-button.selected');
 
-    fetch("/api/add_to_cart/", {
-        method: "POST",
-        headers: {
-            "Content-Type": "application/json",
-            "X-CSRFToken": "{{ csrf_token }}"
-        },
-        body: JSON.stringify({
-            product_id: "{{ product.id }}",
-            size: selectedSize ? selectedSize.dataset.size : null,
-            color: selectedColorInput ? selectedColorInput.value : null
+        const colorValue = selectedColorInput ? selectedColorInput.value : null;
+
+        console.log("Selected color:", colorValue);
+
+        fetch("/api/add_to_cart/", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": "{{ csrf_token }}"
+            },
+            body: JSON.stringify({
+                product_id: "{{ product.id }}",
+                size: selectedSize ? selectedSize.dataset.size : null,
+                color: colorValue
+            })
         })
-    })
-    .then(response => response.json())
-    .then(data => {
-        console.log("Response:", data);
-        document.getElementById("result").innerText = data.message;
-    })
-    .catch(error => {
-        console.error("Error:", error);
-    });
-};
+        .then(response => response.json())
+        .then(data => {
+            console.log("Response:", data);
+            document.getElementById("result").innerText = data.message;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+    };
 
 </script>
 {% endblock %}
