--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -79,13 +79,13 @@
         <div class="buttons-div">
             <button class="first-button favorite-button2">ფავორიტად არჩევა</button>
 
-            <div id="cart-button-div">
+            <section id="cart-button-div" style="">
                 {% if does_user_own_product %}
                     <button class="second-button add-to-cart-button2" onclick="remove_from_cart()">კალათიდან ამოშლა</button>
                 {% else %}
                     <button class="second-button add-to-cart-button2" id="cart-add" type="button" onclick="add_to_cart()">კალათაში დამატება</button>
                 {% endif %}
-            </div>  
+            </section>  
         </div>
     </div>
 </form>
@@ -131,7 +131,7 @@
         })
         .then(response => response.json())
         .then(data => {
-            document.getElementById(cart-button-div).innerHTML = `
+            document.getElementById('cart-button-div').innerHTML = `
                 <button class="second-button add-to-cart-button2" onclick="remove_from_cart()">კალათიდან ამოშლა</button>
             `;
         })
