--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -76,16 +76,14 @@
         </div>
 
         <!-- Buttons -->
-        <div class="buttons-div">
+        <div class="buttons-div" id="cart-button-div">
             <button class="first-button favorite-button2">ფავორიტად არჩევა</button>
 
-            <section id="cart-button-div" style="">
-                {% if does_user_own_product %}
-                    <button class="second-button add-to-cart-button2" onclick="remove_from_cart()">კალათიდან ამოშლა</button>
-                {% else %}
-                    <button class="second-button add-to-cart-button2" id="cart-add" type="button" onclick="add_to_cart()">კალათაში დამატება</button>
-                {% endif %}
-            </section>  
+            {% if does_user_own_product %}
+                <button class="second-button add-to-cart-button2" onclick="remove_from_cart()" type="button">კალათიდან ამოშლა</button>
+            {% else %}
+                <button class="second-button add-to-cart-button2" id="cart-add" type="button" onclick="add_to_cart()">კალათაში დამატება</button>
+            {% endif %}
         </div>
     </div>
 </form>
@@ -132,7 +130,9 @@
         .then(response => response.json())
         .then(data => {
             document.getElementById('cart-button-div').innerHTML = `
-                <button class="second-button add-to-cart-button2" onclick="remove_from_cart()">კალათიდან ამოშლა</button>
+                <button class="first-button favorite-button2" type="button">ფავორიტად არჩევა</button>
+
+                <button class="second-button add-to-cart-button2" onclick="remove_from_cart()" type="button">კალათიდან ამოშლა</button>
             `;
         })
         .catch(error => {
@@ -161,6 +161,11 @@
         })
         .then(response => response.json())
         .then(data => {
+            document.getElementById('cart-button-div').innerHTML = `
+                <button class="first-button favorite-button2" type="button">ფავორიტად არჩევა</button>
+
+                <button class="second-button add-to-cart-button2" id="cart-add" type="button" onclick="add_to_cart()">კალათაში დამატება</button>
+            `;
         })
         .catch(error => {
             console.error("Error:", error);
