--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -77,7 +77,12 @@
 
         <!-- Buttons -->
         <div class="buttons-div" id="cart-button-div">
-            <button class="first-button favorite-button2">ფავორიტად არჩევა</button>
+            {% if does_user_have_in_favorites %}
+            <button class="first-button favorite-button2" type="button" onclick="remove_from_favorites()">ფავორიტად ამოშლა</button>
+            {% else %}
+                <button class="first-button favorite-button2" type="button" onclick="add_to_favorites()">ფავორიტად არჩევა</button>
+            {% endif %}
+
 
             {% if does_user_own_product %}
                 <button class="second-button add-to-cart-button2" onclick="remove_from_cart()" type="button">კალათიდან ამოშლა</button>
@@ -166,6 +171,45 @@
 
                 <button class="second-button add-to-cart-button2" id="cart-add" type="button" onclick="add_to_cart()">კალათაში დამატება</button>
             `;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+    };
+
+
+    function add_to_favorites() {
+        fetch("/api/add_to_favorites/", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": "{{ csrf_token }}"
+            },
+            body: JSON.stringify({
+                product_id: "{{ product.id }}"
+            })
+        })
+        .then(response => response.json())
+        .then(data => {
+        })
+        .catch(error => {
+            console.error("Error:", error);
+        });
+    };
+
+    function remove_from_favorites() {
+        fetch("/api/remove_from_favorites/", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": "{{ csrf_token }}"
+            },
+            body: JSON.stringify({
+                product_id: "{{ product.id }}",
+            })
+        })
+        .then(response => response.json())
+        .then(data => {
         })
         .catch(error => {
             console.error("Error:", error);
