--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -19,7 +19,7 @@
 
                 <div id="menu-together">
                     <div class="navs-navs">
-                        <a href="{% url 'products' %}" class="nav nav1">კაცები</a>
+                        <a href="{% url 'products' %}" class="nav nav1">{% trans "კაცები" %}</a>
                         <a href="{% url 'products' %}" class="nav nav2">ქალები</a>
                         <a href="{% url 'products' %}" class="nav nav3">ფასდაკლებები</a>
                         <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
