--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -19,12 +21,12 @@
 
                 <div id="menu-together">
                     <div class="navs-navs">
-                        <a href="{% url 'products' %}" class="nav nav1">{% trans "კაცები" %}</a>
-                        <a href="{% url 'products' %}" class="nav nav2">ქალები</a>
-                        <a href="{% url 'products' %}" class="nav nav3">ფასდაკლებები</a>
-                        <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
-                        <a href="{% url 'cart' %}" class="nav nav5">კალათა</a>
-                        <a href="{% url 'favorites' %}" class="nav nav6">ფავორიტები</a>
+                        <a href="{% url 'products' %}" class="nav nav1">{% trans "Men" %}</a>
+                        <a href="{% url 'products' %}" class="nav nav2">{% trans "Women" %}</a>
+                        <a href="{% url 'products' %}" class="nav nav3">{% trans "Discounts" %}</a>
+                        <a href="{% url 'profile' %}" class="nav nav4">{% trans "Profile" %}</a>
+                        <a href="{% url 'cart' %}" class="nav nav5">{% trans "Cart" %}</a>
+                        <a href="{% url 'favorites' %}" class="nav nav6">{% trans "Favorites" %}</a>
                     </div>
 
                     <button class="search-button">
