--- a/basroba/app/templates/favorites.html
+++ b/basroba/app/templates/favorites.html
@@ -11,52 +11,29 @@
 {% endblock %}
 
 {% block body %}
+<div class="container-main-main">
         <div class="container">
-        <h1 class="text-center mb-5">Favorites</h1>
+        <h1 class="text-center mb-5" style="color: white;">Favorites</h1>
 
-        <div class="product-card">
-            <img src="product1.jpg" alt="Product 1">
-            <div class="product-info">
-                <div class="product-title">Product Title 1</div>
-                <div class="product-details">
-                    <span>Size: M</span><br>
-                    <span>Color: Red</span>
-                </div>
+            {% for i in user_favorites %}
+                <a href="{% url 'product' i.Item.id %}" style="text-decoration: none; color: inherit;">
+                    <div class="product-card">
+                        <img src="{{ i.Item.Product_image1.url }}" alt="{{ i.Item.Product_title }}" class="product-image"   >
+                        <div class="product-info">
+                            <div class="product-title">{{ i.Item }}</div>
+                            <div class="product-details">
+                                <span>Size: No size chosen</span><br>
+                                <span>Color: No size chosen</span>
+                            </div>
+                        </div>
+                        <button class="btn-heart">
+                            <i class="fas fa-heart"></i>
+                        </button>
+                    </div>
+                </a>
             </div>
-            <button class="btn-heart">
-                <i class="fas fa-heart"></i>
-            </button>
-        </div>
-
-        <div class="product-card">
-            <img src="product2.jpg" alt="Product 2">
-            <div class="product-info">
-                <div class="product-title">Product Title 2</div>
-                <div class="product-details">
-                    <span>Size: L</span><br>
-                    <span>Color: Blue</span>
-                </div>
-            </div>
-            <button class="btn-heart">
-                <i class="fas fa-heart"></i>
-            </button>
-        </div>
-
-        <div class="product-card">
-            <img src="product3.jpg" alt="Product 3">
-            <div class="product-info">
-                <div class="product-title">Product Title 3</div>
-                <div class="product-details">
-                    <span>Size: S</span><br>
-                    <span>Color: Green</span>
-                </div>
-            </div>
-            <button class="btn-heart">
-                <i class="fas fa-heart"></i>
-            </button>
-        </div>
-
-    </div>
+            {% endfor %}
+</div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
