--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -38,7 +38,7 @@
         
         <div class="products-div">
             {% for product in all_products %}
-                <a href="{% url 'product' product.pk %}">
+                <a href="{% url 'product' product.pk %}" style="text-decoration: none; color: white;">
                     <div class="product-card">
                         <img src="{% static 'pics/Dress.png' %}" class="product-image" alt="">
                         <h3 class="product-text">ქალთა კაბა</h3>
